fix: remove double scrollbar

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -71,6 +71,7 @@
 
   body {
     @apply text-gray-700;
+    contain: paint;
   }
 
   :focus-visible {
